[package]
name = "dylib_window_example"
version = "0.1.0"
authors = ["吴宇涛 <wuyutao@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
winit = "0.23.0"
instant = "0.1.9"
simple_logger = "1.11.0"