[package]
name = "system_api_test"
version = "0.1.0"
authors = ["wuyutao <wuyutao@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os="win")'.dependencies]
winapi = "0.3.9"