[package]
name = "tokio_with_cpp_thread"
version = "0.1.0"
authors = ["wuyutao <wuyutao@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="0.2.20", features = ["full"] }

[build-dependencies]
cc = "1.0"